# Loan_prediction_ML_Project

./: README.md  color_quantization.py  loan_classifier_pipeline.pkl  main.py  pyproject.toml  users.json
