[project]
name = "loan-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.2",
    "matplotlib>=3.11.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn==1.6.1",
    "streamlit>=1.58.0",
]
